bynkc/tests/fixtures/positive/33_simple_sum/input.karn
commons test {
  type Status = enum { Pending, Active, Done }

  fn first() -> Status {
    Pending
  }
}
