bynkc/tests/fixtures/negative/36_is_invalid_pattern/input.karn
commons test {
  type Status = enum { Pending, Active, Done }

  fn bad(s: Status) -> Bool {
    s is Nope
  }
}
